--- a/trunk/DatasetWindow.xib
+++ b/trunk/DatasetWindow.xib
@@ -2,9 +2,9 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1060</int>
-		<string key="IBDocument.SystemVersion">10J869</string>
+		<string key="IBDocument.SystemVersion">10K540</string>
 		<string key="IBDocument.InterfaceBuilderVersion">804</string>
-		<string key="IBDocument.AppKitVersion">1038.35</string>
+		<string key="IBDocument.AppKitVersion">1038.36</string>
 		<string key="IBDocument.HIToolboxVersion">461.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -21,7 +21,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="36"/>
+			<integer value="2"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -425,22 +425,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
-						<string key="label">value: datasetViewsBrowser.zoomValue</string>
-						<reference key="source" ref="436192214"/>
-						<reference key="destination" ref="1001"/>
-						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="436192214"/>
-							<reference key="NSDestination" ref="1001"/>
-							<string key="NSLabel">value: datasetViewsBrowser.zoomValue</string>
-							<string key="NSBinding">value</string>
-							<string key="NSKeyPath">datasetViewsBrowser.zoomValue</string>
-							<int key="NSNibBindingConnectorVersion">2</int>
-						</object>
-					</object>
-					<int key="connectionID">31</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBBindingConnection" key="connection">
 						<string key="label">title: delegate.selectedDataset.title</string>
 						<reference key="source" ref="1005"/>
 						<reference key="destination" ref="1004"/>
@@ -460,7 +444,7 @@
 						<string key="label">content: arrangedObjects</string>
 						<reference key="source" ref="24077413"/>
 						<reference key="destination" ref="171322530"/>
-						<object class="NSNibBindingConnector" key="connector">
+						<object class="NSNibBindingConnector" key="connector" id="442451492">
 							<reference key="NSSource" ref="24077413"/>
 							<reference key="NSDestination" ref="171322530"/>
 							<string key="NSLabel">content: arrangedObjects</string>
@@ -494,6 +478,39 @@
 						<reference key="destination" ref="1001"/>
 					</object>
 					<int key="connectionID">46</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">zoomValue: delegate.selectedDataset.zoomValue</string>
+						<reference key="source" ref="24077413"/>
+						<reference key="destination" ref="1004"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="24077413"/>
+							<reference key="NSDestination" ref="1004"/>
+							<string key="NSLabel">zoomValue: delegate.selectedDataset.zoomValue</string>
+							<string key="NSBinding">zoomValue</string>
+							<string key="NSKeyPath">delegate.selectedDataset.zoomValue</string>
+							<reference key="NSPreviousConnector" ref="442451492"/>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">51</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: delegate.selectedDataset.zoomValue</string>
+						<reference key="source" ref="436192214"/>
+						<reference key="destination" ref="1004"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="436192214"/>
+							<reference key="NSDestination" ref="1004"/>
+							<string key="NSLabel">value: delegate.selectedDataset.zoomValue</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">delegate.selectedDataset.zoomValue</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">52</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -673,7 +690,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">46</int>
+			<int key="maxID">52</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
